--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,9 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="textColor">#1FC57A</color>
+    <color name="endColor">#1FC57A</color>
+    <color name="iconColor">#1FC57A</color>
+    <color name="startColor">#FFFFFF</color>
+
 </resources>
