--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -23,7 +23,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:fontFamily="@font/yeonsung_regular"
-        android:text="Forklore"
+        android:text="@string/forklore"
         android:textColor="@color/textColor"
         android:textSize="45sp"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
@@ -36,7 +36,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:fontFamily="@font/lato_bold"
-        android:text="Where Every Meal Tells A Tale"
+        android:text="@string/where_every_meal_tells_a_tale"
         android:textColor="@color/textColor"
         android:textSize="25sp"
         app:layout_constraintEnd_toEndOf="@+id/textView"
