--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -15,7 +15,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/burrgar" />
+        app:srcCompat="@drawable/burger" />
 
     <TextView
         android:id="@+id/textView3"
@@ -23,7 +23,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:fontFamily="@font/yeonsung_regular"
-        android:text="Welcome, Keeper Of Forklore!"
+        android:text="@string/welcome_keeper_of_forklore"
         android:textColor="@color/textColor"
         android:textSize="25sp"
         app:layout_constraintEnd_toEndOf="@+id/imageView2"
