--- a/app/src/main/res/layout/activity_choose_location.xml
+++ b/app/src/main/res/layout/activity_choose_location.xml
@@ -13,7 +13,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="32dp"
+        android:fontFamily="@font/yeonsung_regular"
         android:text="Choose Your Location"
+        android:textSize="25sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -27,16 +29,33 @@
         android:background="@drawable/edittextshape"
         app:endIconDrawable="@drawable/arrow_down"
         app:boxStrokeWidth="0dp"
+        app:boxStrokeWidthFocused="0dp"
+
         app:endIconTint="@color/black"
         app:layout_constraintTop_toBottomOf="@+id/textView9">
+
         <AutoCompleteTextView
+            android:id="@+id/listOfLocation"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/listOfLocation"
+            android:fontFamily="@font/lato_regular"
             android:inputType="none"
-            android:text="Choose Location"
-            android:fontFamily="@font/lato_regular"/>
+            android:text="Choose Location" />
     </com.google.android.material.textfield.TextInputLayout>
+
+    <TextView
+        android:id="@+id/textView15"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="100dp"
+        android:fontFamily="@font/lato_regular"
+        android:text="To provide you with the best dining experience, we need your permission to access your device's location. By enabling location services, we can offer personalized restaurant recommendations, accurate delivery estimates, and ensure a seamless food delivery experience.&quot;"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
