--- a/app/src/main/res/layout/cart_item.xml
+++ b/app/src/main/res/layout/cart_item.xml
@@ -39,7 +39,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="16dp"
+                android:fontFamily="@font/lato_regular"
                 android:text="TextView"
+                android:textSize="16sp"
                 app:layout_constraintBottom_toTopOf="@+id/cartItemPrice"
                 app:layout_constraintStart_toEndOf="@+id/cartImage"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -50,6 +52,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="16dp"
                 android:text="TextView"
+                android:textColor="@color/textColor"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/cartImage"
                 app:layout_constraintTop_toBottomOf="@+id/cartFoodName" />
@@ -71,6 +74,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
+                android:fontFamily="@font/lato_bold"
                 android:text="1"
                 app:layout_constraintBottom_toBottomOf="@+id/plusbutton"
                 app:layout_constraintEnd_toStartOf="@+id/plusbutton"
