--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,8 @@
     <color name="white">#FFFFFFFF</color>
     <color name="textColor">#1FC57A</color>
     <color name="endColor">#15BE77</color>
-    <color name="iconColor">#1FC57A</color>
+    <color name="iconColor">#FEAD1D</color>
     <color name="startColor">#53E88B</color>
+
 
 </resources>
