--- a/app/src/main/res/layout/popular_item.xml
+++ b/app/src/main/res/layout/popular_item.xml
@@ -37,7 +37,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="16dp"
-                android:fontFamily="@font/yeonsung_regular"
+                android:fontFamily="@font/lato_regular"
                 android:text="Food Name"
                 android:textColor="@color/black"
                 android:textSize="16sp"
