--- a/app/src/main/res/layout/fragment_notification__bottom_.xml
+++ b/app/src/main/res/layout/fragment_notification__bottom_.xml
@@ -18,7 +18,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
-            android:fontFamily="@font/lato_regular"
+            android:fontFamily="@font/lato_bold"
             android:text="Notifications"
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
