--- a/app/src/main/res/layout/popular_item.xml
+++ b/app/src/main/res/layout/popular_item.xml
@@ -6,9 +6,11 @@
     android:layout_height="wrap_content" >
 
     <androidx.cardview.widget.CardView
-        android:layout_width="350dp"
+        android:layout_width="0dp"
         android:layout_height="87dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="10dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginBottom="10dp"
         app:cardCornerRadius="15dp"
         app:cardElevation="4dp"
@@ -18,6 +20,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:background="@color/white"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
